{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 120,
  "lineage": "e7c5bbc2-23bc-add7-df52-38816bc01fee",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/networkInterfaces/test-nic",
            "internal_domain_name_suffix": "bs3pgamkcciuvaxdgunw04l12g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/publicIPAddresses/test-twinkal-vm-public-ip",
                "subnet_id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/virtualNetworks/vnet_twinkal/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "test-nic",
            "private_ip_address": "192.168.0.68",
            "private_ip_addresses": [
              "192.168.0.68"
            ],
            "resource_group_name": "rg_twinkal"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-twinkal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/networkSecurityGroups/nsg-twinkal",
            "location": "eastus",
            "name": "nsg-twinkal",
            "resource_group_name": "rg_twinkal",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/networkSecurityGroups/nsg-twinkal/securityRules/Allow-HTTP-HTTPS-SSH",
            "name": "Allow-HTTP-HTTPS-SSH",
            "network_security_group_name": "nsg-twinkal",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_twinkal",
            "source_address_prefix": "103.228.147.17",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-twinkal",
            "azurerm_resource_group.rg",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/networkSecurityGroups/nsg-twinkal/securityRules/Allow-All-Outbound",
            "name": "Allow-All-Outbound",
            "network_security_group_name": "nsg-twinkal",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "rg_twinkal",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-twinkal",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/publicIPAddresses/test-twinkal-vm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.191.66.198",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-twinkal-vm-public-ip",
            "resource_group_name": "rg_twinkal",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/virtualNetworks/vnet_twinkal/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "rg_twinkal",
            "virtual_network_name": "vnet_twinkal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/virtualNetworks/vnet_twinkal/subnets/subnet1",
            "network_security_group_id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/networkSecurityGroups/nsg-twinkal",
            "subnet_id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/virtualNetworks/vnet_twinkal/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-twinkal",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "01f3ba0c-108a-4a91-82e3-351b6d797be6",
            "id": "/subscriptions/0aef9e33-85e8-4f22-9173-6ce19a226d16/resourceGroups/rg_twinkal/providers/Microsoft.Network/virtualNetworks/vnet_twinkal",
            "location": "eastus",
            "name": "vnet_twinkal",
            "resource_group_name": "rg_twinkal"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}